src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Active1__c</fullName>
        <formula>Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if the promotion is active or not.  D-1544</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Direct__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is to determine if the promotion must be visible on Direct (Salesforce) channel.</description>
        <label>Channel: Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_E_Shop_overseas__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is to determine if the promotion must be visible on E-shop to some customers.</description>
        <label>Channel: E-Shop (overseas)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_E_Shop_private__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is to determine if the promotion must be visible on E-shop to some customers eg: invited using eDM.</description>
        <label>Channel: E-Shop (private)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_E_Shop_public__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is to determine if the promotion must be visible on E-shop to all public.</description>
        <label>Channel: E-Shop (public)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Add_On__c</fullName>
        <description>User specified</description>
        <label>Contract (Add On)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Period_Add_On__c</fullName>
        <description>User specified</description>
        <label>Contract Period (Add On)</label>
        <picklist>
            <controllingField>Contract_Add_On__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Period__c</fullName>
        <description>If Contract field is Yes, this field must be between 1 and 36. 
If the Contract field is No, this field must be NA.</description>
        <label>Contract Period</label>
        <picklist>
            <controllingField>Contract__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>User specified</description>
        <label>Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>User specified</description>
        <label>Effective End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>User specified</description>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maximum_No_of_gifts_allowed__c</fullName>
        <description>User specified</description>
        <label>Maximum No. of gifts allowed</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_Charge_Add_On__c</fullName>
        <description>User specified</description>
        <label>Penalty Charge (Add On)</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Penalty_Charge_Override_Add_On__c</fullName>
        <description>User specified</description>
        <label>Penalty Charge Override (Add On)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penalty_Charge_Override__c</fullName>
        <description>If this field is blank, then the value in the penalty charge field is taken as the penalty charge.</description>
        <label>Penalty Charge Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penalty_Charge__c</fullName>
        <description>User specified</description>
        <label>Penalty Charge</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <description>The promotion code will be shared across multiple promotions to simulate grouping of promotions of different contract periods.</description>
        <externalId>true</externalId>
        <label>Promotion Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <description>User specified</description>
        <label>Promotion Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <description>This will be a read only field based on the Promotion Type selection on the Home page.</description>
        <label>Promotion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gift Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Gift Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-On Promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions_Detail__c</fullName>
        <description>User specified</description>
        <label>Terms &amp; Conditions (Detail)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions_Summary__c</fullName>
        <description>User specified</description>
        <label>Terms &amp; Conditions (Summary)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All_Promo</fullName>
        <columns>Promotion_Code__c</columns>
        <columns>Promotion_Name__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>NAME</columns>
        <columns>Channel_Direct__c</columns>
        <columns>Channel_E_Shop_overseas__c</columns>
        <columns>Channel_E_Shop_private__c</columns>
        <columns>Channel_E_Shop_public__c</columns>
        <columns>Contract__c</columns>
        <columns>Contract_Period__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Maximum_No_of_gifts_allowed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Promo</label>
    </listViews>
    <listViews>
        <fullName>All_Promo_with_Penalty_Charge</fullName>
        <columns>NAME</columns>
        <columns>Penalty_Charge__c</columns>
        <columns>Active__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Penalty_Charge__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Promo with Penalty Charge</label>
    </listViews>
    <listViews>
        <fullName>Mctan_Promotion</fullName>
        <columns>NAME</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Contract_Period__c</columns>
        <columns>Promotion_Name__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Channel_Direct__c</columns>
        <columns>Channel_E_Shop_public__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Mctan</value>
        </filters>
        <label>Mctan Promotion</label>
    </listViews>
    <listViews>
        <fullName>X2015_Promo</fullName>
        <columns>Promotion_Code__c</columns>
        <columns>NAME</columns>
        <columns>Channel_Direct__c</columns>
        <columns>Channel_E_Shop_overseas__c</columns>
        <columns>Channel_E_Shop_private__c</columns>
        <columns>Channel_E_Shop_public__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Contract_Period__c</columns>
        <columns>Contract__c</columns>
        <columns>Active1__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>2015</value>
        </filters>
        <label>2015 Promo</label>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <recordTypes>
        <fullName>Add_On_Promotion</fullName>
        <active>true</active>
        <description>Add-On Promotion</description>
        <label>Add-On Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gift_Promotion</fullName>
        <active>true</active>
        <description>Gift Promotion</description>
        <label>Gift Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Gift_Promotion</fullName>
        <active>true</active>
        <description>Non-Gift Promotion</description>
        <label>Non-Gift Promotion</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Effective_End_Date_should_be_after_the_E</fullName>
        <active>true</active>
        <description>Effective End Date should be after the Effective Start Date</description>
        <errorConditionFormula>Effective_Start_Date__c &gt;= Effective_End_Date__c</errorConditionFormula>
        <errorDisplayField>Effective_End_Date__c</errorDisplayField>
        <errorMessage>Effective End Date is not after the Effective Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_Code_Validation</fullName>
        <active>true</active>
        <description>Promotion Code not allowed to be changed.</description>
        <errorConditionFormula>IF(ISNULL( PRIORVALUE( Promotion_Code__c )),FALSE,ISCHANGED( Promotion_Code__c ) )</errorConditionFormula>
        <errorDisplayField>Promotion_Code__c</errorDisplayField>
        <errorMessage>Promotion Code not allowed to be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_Type_Validation</fullName>
        <active>true</active>
        <description>Do not allow the user to change the Promotion Type.</description>
        <errorConditionFormula>IF(ISNULL( PRIORVALUE( Promotion_Type__c )),FALSE,ISCHANGED( Promotion_Type__c ) )</errorConditionFormula>
        <errorMessage>Promotion Type not allowed to be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCR_PromoSetup_VR_2_a</fullName>
        <active>true</active>
        <description>a) If Contract is Yes, then contract period must not be blank</description>
        <errorConditionFormula>AND(ISPICKVAL(Contract__c , &apos;Yes&apos;), ISPICKVAL( Contract_Period__c , &apos;&apos;) )</errorConditionFormula>
        <errorDisplayField>Contract_Period__c</errorDisplayField>
        <errorMessage>Contract period must not be blank if contract is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCR_PromoSetup_VR_2_b</fullName>
        <active>true</active>
        <description>If Contract (Add-On) is Yes, then contract period (Add-On) must not be blank</description>
        <errorConditionFormula>AND(ISPICKVAL( Contract_Add_On__c , &apos;Yes&apos;), ISPICKVAL(  Contract_Period_Add_On__c , &apos;&apos;) )</errorConditionFormula>
        <errorDisplayField>Contract_Period_Add_On__c</errorDisplayField>
        <errorMessage>Contract period (Add-On) must not be blank if Contract (Add-On) is Yes</errorMessage>
    </validationRules>
</CustomObject>